make sure progress bar is always visible

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,7 +26,9 @@
   background-color: lighten($primary-color,20) !important;
   height: 3px;
   width: 100%;
-  position: absolute;
+  position: fixed;
+  top: 0;
+  left: 0;
   opacity: 100;
   animation-name: blink-animation;
   animation-iteration-count: infinite;
